--- a/src/sql/member/member-query.properties
+++ b/src/sql/member/member-query.properties
@@ -1,3 +1,3 @@
-loginSelect=SELECT * FROM MEMBER WHERE member_id=? AND member_pwd=? AND STATUS='Y'
+loginSelect=SELECT * FROM MEMBER WHERE member_id=? AND member_pwd=? AND MEMBER_STATUS=0
 idCheck=SELECT COUNT(*) FROM MEMBER WHERE member_id=?
-insertMember=INSERT INTO MEMBER VALUES(SEQ_MEMBER.NEXTVAL,?)
+#insertMember=INSERT INTO MEMBER VALUES(SEQ_MEMBER.NEXTVAL,?)
