--- a/src/sql/product/product-query.properties
+++ b/src/sql/product/product-query.properties
@@ -2,3 +2,6 @@
 listCount=SELECT COUNT(*)  FROM PRODUCT  WHERE PRODUCT_DELETEYN=0
 selectList=SELECT RNUM,PRODUCT_NO, MEMBER_CODE, PRODUCT_NAME, PRODUCT_CATEGORY, PRODUCT_ITEM, PRODUCT_ITEMPRICE, PRODUCT_CONTEXT, PRODUCT_REGISTERDATE, PRODUCT_DELETEYN FROM ( SELECT ROWNUM RNUM, PRODUCT_NO, MEMBER_CODE, PRODUCT_NAME, PRODUCT_CATEGORY, PRODUCT_ITEM, PRODUCT_ITEMPRICE, PRODUCT_CONTEXT, PRODUCT_REGISTERDATE, PRODUCT_DELETEYN FROM(SELECT P.PRODUCT_NO, M.MEMBER_CODE, P.PRODUCT_NAME, P.PRODUCT_CATEGORY, P.PRODUCT_ITEM, P.PRODUCT_ITEMPRICE, P.PRODUCT_CONTEXT, P.PRODUCT_REGISTERDATE, P.PRODUCT_DELETEYN FROM PRODUCT P  JOIN MEMBER M ON (M.MEMBER_CODE = P.MEMBER_CODE) WHERE P.PRODUCT_DELETEYN=0 ORDER BY P.PRODUCT_NO DESC)) WHERE RNUM BETWEEN ? AND ?
 insertThumb=INSERT INTO PRODUCT VALUES (SEQ_PRODUCT.NEXTVAL, 5, ?, ?, ?, ?, ?,  SYSDATE, 0)
+selectCurrval=SELECT SEQ_PRODUCT.CURRVAL FROM DUAL
+insertPlusProduct=INSERT INTO PLUSPRODUCT VALUES(?,?,?) 
+insertAttachment=INSERT INTO IMG VALUES (SEQ_IMG.NEXTVAL, ?, ?, 3, NULL, 5, NULL, ?, ?, DEFAULT)
