--- a/src/sql/member/member-query.properties
+++ b/src/sql/member/member-query.properties
@@ -1,8 +1,8 @@
 # LEE
-insertMember=INSERT INTO MEMBER VALUES(SEQ_MEMBER.NEXTVAL,?)
+#insertMember=INSERT INTO MEMBER VALUES(SEQ_MEMBER.NEXTVAL,?)
 adminBoardList=
 
 #JEONG
-loginSelect=SELECT * FROM MEMBER WHERE MEMBER_ID=? AND MEMBER_PWD=? AND STATUS=0
+loginSelect=SELECT * FROM MEMBER WHERE MEMBER_ID=? AND MEMBER_PWD=? AND MEMBER_STATUS=0
 idCheck=SELECT COUNT(*) FROM MEMBER WHERE member_id=?
-insertMember=INSERT INTO MEMBER VALUES(SEQ_MEMBER.NEXTVAL,?)
+insertMember=INSERT INTO MEMBER VALUES(SEQ_MEMBER.NEXTVAL,?,?,?,?,?,?,?,DEFUALT)
