거래창 구현

--- a/src/sql/cash/cash-query.properties
+++ b/src/sql/cash/cash-query.properties
@@ -1,2 +1,3 @@
 insertPay=INSERT INTO PAY VALUES(SEQ_PAY.NEXTVAL, ?, SYSDATE, ?)
 insertRefundData=INSERT INTO REFUND VALUES(SEQ_REFUND.NEXTVAL, ?, ?, ?, ?, ?, ?, SYSDATE)
+selectOneProduct=SELECT DISTINCT D.DEAL_NO, P.PRODUCT_NO, I.IMG_FILEPATH, P.PRODUCT_NAME, P.PRODUCT_CONTEXT, D.CUSTOMER_CODE, D.SELLER_CODE, P.PRODUCT_ITEM, P.PRODUCT_ITEMPRICE, PL.PLUSPRODUCT_ITEM, PL.PLUSPRODUCT_PRICE, MC.MEMBERCASH_NOWCASH  FROM MEMBER M JOIN PRODUCT P ON(M.MEMBER_CODE = P.MEMBER_CODE) JOIN DEAL D ON(P.PRODUCT_NO = D.PRODUCT_NO) JOIN IMG I ON(P.PRODUCT_NO = I.PRODUCT_NO) JOIN PLUSPRODUCT PL ON(P.PRODUCT_NO = PL.PRODUCT_NO) JOIN MEMBERCASH MC ON(M.MEMBER_CODE = MC.MEMBER_CODE) WHERE M.MEMBER_CODE = ? AND P.PRODUCT_NO = ?
