--- a/src/sql/member/member-query.properties
+++ b/src/sql/member/member-query.properties
@@ -4,5 +4,8 @@ adminBoardList=
 
 #JEONG
 loginSelect=SELECT * FROM MEMBER WHERE MEMBER_ID=? AND MEMBER_PWD=? AND MEMBER_STATUS=0
-idCheck=SELECT COUNT(*) FROM MEMBER WHERE member_id=?
-insertMember=INSERT INTO MEMBER VALUES(SEQ_MEMBER.NEXTVAL,?,?,?,?,?,?,?,DEFUALT)
+idCheck=SELECT COUNT(*) FROM MEMBER WHERE MEMBER_ID=?
+insertMember=INSERT INTO MEMBER(MEMBER_CODE, MEMBER_ID,MEMBER_NAME,MEMBER_EMAIL,MEMBER_PWD,MEMBER_PHONE,SELLER_INTRODUCTION,SELLER_CAREER) VALUES(SEQ_MEMBER.NEXTVAL,?,?,?,?,?,?,?)
+findID=SELECT MEMBER_ID FROM MEMBER WHERE MEMBER_NAME=? AND MEMBER_EMAIL=?
+findPWD=SELECT MEMBER_PWD FROM MEMBER WHERE MEMBER_ID=? AND MEMBER_NAME=? AND MEMBER_EMAIL=?
+#updateMember= UPDATE MEMBER SET(member_name = ?) 
