--- a/src/sql/board/board-query.properties
+++ b/src/sql/board/board-query.properties
@@ -1,5 +1,5 @@
 selectList=SELECT B.BOARD_NO, B.MEMBER_CODE, B.BOARD_TITLE, B.BOARD_CONTEXT, B.BOARD_DATE, B.BOARD_CATEGORY, B.BOARD_COUNT, B.BOARD_DELETE FROM BOARD B JOIN MEMBER M ON(B.MEMBER_CODE = M.MEMBER_NAME)
 insertBoard=INSERT INTO BOARD VALUES (SEQ_BOARD_NO.NEXTVAL, 10, ?, ?, SYSDATE, 0, DEFAULT, 0)   
-listCount=SELECT COUNT(*) FROM BOARD WHERE B.BOARD_CATEGORY=0 AND B.BOARD_DELETE=0
+listCount=SELECT COUNT(*) FROM BOARD WHERE BOARD_CATEGORY=0 AND BOARD_DELETE=0
 updateCount=UPDATE BOARD SET BOARD_COUNT=(SELECT BOARD_COUNT FROM BOARD WHERE MEMBER_CODE=?) + 1 WHERE MEMBER_CODE=?
 selectOne==SELECT B.BOARD_NO, B.MEMBER_CODE, B.BOARD_TITLE, B.BOARD_DATE, B.BOARD COUNT, B.BOARD_DELETE FROM BOARD JOIN MEMBER ON(B.MEMBER_CODE = M.MEMBER_NAME) WHERE B.MEMBER_CODE = ? AND B.BOARD_DELETE = 0
