--- a/src/sql/mypage/mypage_query.properties
+++ b/src/sql/mypage/mypage_query.properties
@@ -1,1 +1,1 @@
-myselectList = SELECT M.MEMBER_ID, P.PRODUCT_NAME, DL.DEALLIST_ADDMESSAGE FROM MEMBER M JOIN DEAL D ON (M.MEMBER_CODE = D.SELLER_CODE) JOIN PRODUCT P ON (P.PRODUCT_NO = D.PRODUCT_NO) JOIN DEALLIST DL ON(DL.DEAL_NO = D.DEAL_NO) WHERE D.CUSTOMER_CODE=?
+myselectList = SELECT M.MEMBER_ID, P.PRODUCT_NAME, DL.DEALLIST_ADDMESSAGE FROM MEMBER M JOIN DEAL D ON (M.MEMBER_CODE = D.SELLER_CODE) JOIN PRODUCT P ON (P.PRODUCT_NO = D.PRODUCT_NO) JOIN DEALLIST DL ON(DL.DEAL_NO = D.DEAL_NO) WHERE D.CUSTOMER_CODE=? AND DL.DEALLIST_CATEGORY=0
