충전, 결제창 마무리

--- a/src/sql/cash/cash-query.properties
+++ b/src/sql/cash/cash-query.properties
@@ -5,8 +5,8 @@ updateCashDeal=INSERT INTO DEALLIST VALUES(?, ?, 1)
 #updateCashDeal=UPDATE DEALLIST SET DEAL_NO = ?, DEALLIST_ADDMESSAGE = ?, DEALLIST_CATEGORY = 1
 updateCustomerCash=INSERT INTO MEMBERCASH VALUES(SEQ_MEMBERCASH.NEXTVAL, ?, ?, 0, ?, ?, NULL, NULL, NULL, NULL)
 updateSellerCash=INSERT INTO MEMBERCASH VALUES(SEQ_MEMBERCASH.NEXTVAL, ?, ?, 0, ?, ?, NULL, NULL, NULL, NULL)
-
-
+selectMemberNowCash=SELECT MC.MEMBERCASH_NOWCASH FROM (SELECT MEMBERCASH_NOWCASH, MEMBER_CODE FROM MEMBERCASH ORDER BY MEMBERCASH_CODE DESC)  MC WHERE MC.MEMBER_CODE = ? AND ROWNUM =1
+insertMemberCash=INSERT INTO MEMBERCASH VALUES(SEQ_MEMBERCASH.NEXTVAL, ?, (SELECT MC.MEMBERCASH_NOWCASH FROM (SELECT MEMBERCASH_NOWCASH, MEMBER_CODE FROM MEMBERCASH ORDER BY MEMBERCASH_CODE DESC)  MC WHERE MC.MEMBER_CODE = ? AND ROWNUM =1)+? , 1, NULL, NULL, (SELECT P.PAY_NO FROM (SELECT PAY_NO FROM PAY ORDER BY 1 DESC) P WHERE ROWNUM =1), ?, NULL, NULL)
 
 
 
