이미지 업데이트 오류해결..

--- a/src/sql/product/product-query.properties
+++ b/src/sql/product/product-query.properties
@@ -12,5 +12,5 @@ selectImageOne=SELECT P.PRODUCT_NO, M.MEMBER_CODE, M.MEMBER_ID, P.PRODUCT_NAME, 
 selectOne=SELECT P.PRODUCT_NAME, P.PRODUCT_CATEGORY, P.PRODUCT_ITEM, P.PRODUCT_ITEMPRICE, P.PRODUCT_CONTEXT, P.PRODUCT_REGISTERDATE, I.ORIGINNAME, I.CHANGENAME, I.IMG_FILEPATH, PP.PLUSPRODUCT_ITEM, PP.PLUSPRODUCT_PRICE FROM PRODUCT P JOIN IMG I ON (I.PRODUCT_NO=P.PRODUCT_NO) JOIN PLUSPRODUCT PP ON (P.PRODUCT_NO=PP.PRODUCT_NO) WHERE PRODUCT_DELETEYN=0 AND I.IMG_DELETE=0 AND P.PRODUCT_NO=?
 updateProduct=UPDATE PRODUCT SET PRODUCT_NAME=?, PRODUCT_CATEGORY=?, PRODUCT_ITEM=?, PRODUCT_ITEMPRICE=?, PRODUCT_CONTEXT=?, PRODUCT_REGISTERDATE=SYSDATE WHERE PRODUCT_NO=?
 updateAttachment=UPDATE IMG SET ORIGINNAME=?, CHANGENAME=?, IMG_LEVEL=?, IMG_FILEPATH=? WHERE PRODUCT_NO=?
-updatePlusProduct=UPDATE PLUSPRODUCT SET PLUSPRODUCT_ITEM=?, PLUSPRODUCT_PRICE=? WHERE PRODUCT_NO=?
-
+updatePlusProduct=UPDATE PLUSPRODUCT SET PLUSPRODUCT_ITEM=?, PLUSPRODUCT_PRICE=? WHERE PRODUCT_NO=? AND PLUSPRODUCT_ITEM=?
+selectPlusProduct=SELECT PRODUCT_NO, PLUSPRODUCT_ITEM, PLUSPRODUCT_PRICE FROM PLUSPRODUCT WHERE PRODUCT_NO=? AND PLUSPRODUCT_ITEM=?
