--- a/src/sql/board/board-query.properties
+++ b/src/sql/board/board-query.properties
@@ -1,6 +1,11 @@
-selectList=SELECT RNUM, BOARD_NO, MEMBER_NAME, BOARD_TITLE, BOARD_CONTEXT, BOARD_DATE, BOARD_CATEGORY, BOARD_COUNT, BOARD_DELETE FROM (SELECT ROWNUM RNUM, BOARD_NO, MEMBER_NAME, BOARD_TITLE, BOARD_CONTEXT, BOARD_DATE, BOARD_CATEGORY, BOARD_COUNT, BOARD_DELETE FROM (SELECT B.BOARD_NO, M.MEMBER_NAME, B.BOARD_TITLE, B.BOARD_CONTEXT, B.BOARD_DATE, B.BOARD_CATEGORY, B.BOARD_COUNT, B.BOARD_DELETE FROM BOARD B JOIN MEMBER M ON(B.MEMBER_CODE = M.MEMBER_CODE) ORDER BY B.BOARD_NO DESC)) WHERE RNUM BETWEEN ? AND ?
+#selectList=SELECT RNUM, BOARD_NO, MEMBER_NAME, BOARD_TITLE, BOARD_CONTEXT, BOARD_DATE, BOARD_CATEGORY, BOARD_COUNT, BOARD_DELETE FROM (SELECT ROWNUM RNUM, BOARD_NO, MEMBER_NAME, BOARD_TITLE, BOARD_CONTEXT, BOARD_DATE, BOARD_CATEGORY, BOARD_COUNT, BOARD_DELETE FROM (SELECT B.BOARD_NO, M.MEMBER_NAME, B.BOARD_TITLE, B.BOARD_CONTEXT, B.BOARD_DATE, B.BOARD_CATEGORY, B.BOARD_COUNT, B.BOARD_DELETE FROM BOARD B JOIN MEMBER M ON(B.MEMBER_CODE = M.MEMBER_CODE) ORDER BY B.BOARD_NO DESC)) WHERE RNUM BETWEEN ? AND ?
+selectList=SELECT RNUM, BOARD_NO, MEMBER_NAME, BOARD_TITLE, BOARD_CONTEXT, BOARD_DATE, BOARD_CATEGORY, BOARD_COUNT, BOARD_DELETE FROM (SELECT ROWNUM RNUM, BOARD_NO, MEMBER_NAME, BOARD_TITLE, BOARD_CONTEXT, BOARD_DATE, BOARD_CATEGORY, BOARD_COUNT, BOARD_DELETE FROM (SELECT B.BOARD_NO, M.MEMBER_NAME, B.BOARD_TITLE, B.BOARD_CONTEXT, B.BOARD_DATE, B.BOARD_CATEGORY, B.BOARD_COUNT, B.BOARD_DELETE FROM BOARD B JOIN MEMBER M ON(B.MEMBER_CODE = M.MEMBER_CODE) WHERE BOARD_CATEGORY = 0  ORDER BY B.BOARD_NO DESC)) WHERE  RNUM BETWEEN ? AND ?
 insertBoard=INSERT INTO BOARD VALUES (SEQ_BOARD.NEXTVAL, ?, ?, ?, SYSDATE, 0, DEFAULT, 0)   
 listCount=SELECT COUNT(*) FROM BOARD WHERE BOARD_CATEGORY=0 AND BOARD_DELETE=0
-updateCount=UPDATE BOARD SET BOARD_COUNT=(SELECT BOARD_COUNT FROM BOARD WHERE MEMBER_CODE=?) + 1 WHERE MEMBER_CODE=?
-selectOne==SELECT BOARD_NO, MEMBER_NAME, BOARD_TITLE, BOARD_CONTEXT, BOARD_DATE, BOARD_CATEGORY, BOARD_COUNT, BOARD_DELETE FROM BOARD JOIN MEMBER ON(B.MEMBER_CODE = M.MEMBER_CODE) WHERE B.BOARD_DELETE = 0 AND B.BOARD_NO=?
-selectBoardval=SELECT SEQ_BOARD.CURRVAL FROM DUAL
+#updateCount=UPDATE BOARD SET BOARD_COUNT=(SELECT BOARD_COUNT FROM BOARD WHERE MEMBER_CODE=?) + 1 WHERE MEMBER_CODE=?
+updateCount=UPDATE BOARD SET BOARD_COUNT=(SELECT BOARD_COUNT FROM BOARD WHERE BOARD_NO=?) + 1 WHERE BOARD_NO=?
+#selectOne=SELECT BOARD_NO, MEMBER_NAME, BOARD_TITLE, BOARD_CONTEXT, BOARD_DATE, BOARD_CATEGORY, BOARD_COUNT, BOARD_DELETE FROM BOARD JOIN MEMBER ON(B.MEMBER_CODE = M.MEMBER_CODE) WHERE B.BOARD_DELETE = 0 AND B.BOARD_NO=?
+selectOne=SELECT BOARD_NO, MEMBER_NAME, BOARD_TITLE, BOARD_CONTEXT, BOARD_DATE, BOARD_CATEGORY, BOARD_COUNT, BOARD_DELETE FROM BOARD B JOIN MEMBER M ON(B.MEMBER_CODE = M.MEMBER_CODE) WHERE B.BOARD_DELETE = 0 AND B.BOARD_NO=?
+selectCurrval=SELECT SEQ_PRODUCT.CURRVAL FROM DUAL
+selectNextval=SELECT SEQ_PRODUCT.NEXTVAL FROM DUAL
+updateBoard=UPDATE BOARD SET BOARD_NAME=?, BOARD_CONTEXT=?, BOARD_NO=?
