--- a/src/sql/member/member-query.properties
+++ b/src/sql/member/member-query.properties
@@ -10,3 +10,4 @@ insertMember=INSERT INTO MEMBER(MEMBER_CODE, MEMBER_ID,MEMBER_NAME,MEMBER_EMAIL,
 findID=SELECT MEMBER_ID FROM MEMBER WHERE MEMBER_NAME=? AND MEMBER_EMAIL=?
 findPWD=SELECT MEMBER_PWD FROM MEMBER WHERE MEMBER_ID=? AND MEMBER_NAME=? AND MEMBER_EMAIL=?
 updateMember= UPDATE MEMBER SET MEMBER_NAME=?, MEMBER_EMAIL=?,MEMBER_PWD=?, MEMBER_PHONE=? SELLER_INTRODUCTION=? SELLER_CAREEA=? WHERE ID=?
+leaveMember = UPDATE MEMEBER SET MEMBER_STATUS=1 WHERE MEMBER_STATUS=0
