--- a/src/sql/board/board-query.properties
+++ b/src/sql/board/board-query.properties
@@ -1,4 +1,5 @@
 #selectList=SELECT RNUM, BOARD_NO, MEMBER_NAME, BOARD_TITLE, BOARD_CONTEXT, BOARD_DATE, BOARD_CATEGORY, BOARD_COUNT, BOARD_DELETE FROM (SELECT ROWNUM RNUM, BOARD_NO, MEMBER_NAME, BOARD_TITLE, BOARD_CONTEXT, BOARD_DATE, BOARD_CATEGORY, BOARD_COUNT, BOARD_DELETE FROM (SELECT B.BOARD_NO, M.MEMBER_NAME, B.BOARD_TITLE, B.BOARD_CONTEXT, B.BOARD_DATE, B.BOARD_CATEGORY, B.BOARD_COUNT, B.BOARD_DELETE FROM BOARD B JOIN MEMBER M ON(B.MEMBER_CODE = M.MEMBER_CODE) ORDER BY B.BOARD_NO DESC)) WHERE RNUM BETWEEN ? AND ?
+#selectList=SELECT RNUM, BOARD_NO, MEMBER_CODE, MEMBER_NAME, BOARD_TITLE, BOARD_CONTEXT, BOARD_DATE, BOARD_CATEGORY, BOARD_COUNT, BOARD_DELETE FROM (SELECT ROWNUM RNUM, BOARD_NO, MEMBER_CODE, MEMBER_NAME, BOARD_TITLE, BOARD_CONTEXT, BOARD_DATE, BOARD_CATEGORY, BOARD_COUNT, BOARD_DELETE FROM (SELECT B.BOARD_NO, B.MEMBER_CODE, M.MEMBER_NAME, B.BOARD_TITLE, B.BOARD_CONTEXT, B.BOARD_DATE, B.BOARD_CATEGORY, B.BOARD_COUNT, B.BOARD_DELETE FROM BOARD B JOIN MEMBER M ON(B.MEMBER_CODE = M.MEMBER_CODE) WHERE BOARD_CATEGORY = 0  ORDER BY B.BOARD_NO DESC)) WHERE  RNUM BETWEEN ? AND ?
 selectList=SELECT RNUM, BOARD_NO, MEMBER_NAME, BOARD_TITLE, BOARD_CONTEXT, BOARD_DATE, BOARD_CATEGORY, BOARD_COUNT, BOARD_DELETE FROM (SELECT ROWNUM RNUM, BOARD_NO, MEMBER_NAME, BOARD_TITLE, BOARD_CONTEXT, BOARD_DATE, BOARD_CATEGORY, BOARD_COUNT, BOARD_DELETE FROM (SELECT B.BOARD_NO, M.MEMBER_NAME, B.BOARD_TITLE, B.BOARD_CONTEXT, B.BOARD_DATE, B.BOARD_CATEGORY, B.BOARD_COUNT, B.BOARD_DELETE FROM BOARD B JOIN MEMBER M ON(B.MEMBER_CODE = M.MEMBER_CODE) WHERE BOARD_CATEGORY = 0  ORDER BY B.BOARD_NO DESC)) WHERE  RNUM BETWEEN ? AND ?
 insertBoard=INSERT INTO BOARD VALUES (SEQ_BOARD.NEXTVAL, ?, ?, ?, SYSDATE, 0, DEFAULT, 0)   
 listCount=SELECT COUNT(*) FROM BOARD WHERE BOARD_CATEGORY=0 AND BOARD_DELETE=0
@@ -8,4 +9,5 @@ updateCount=UPDATE BOARD SET BOARD_COUNT=(SELECT BOARD_COUNT FROM BOARD WHERE BO
 selectOne=SELECT BOARD_NO, MEMBER_NAME, BOARD_TITLE, BOARD_CONTEXT, BOARD_DATE, BOARD_CATEGORY, BOARD_COUNT, BOARD_DELETE FROM BOARD B JOIN MEMBER M ON(B.MEMBER_CODE = M.MEMBER_CODE) WHERE B.BOARD_DELETE = 0 AND B.BOARD_NO=?
 selectCurrval=SELECT SEQ_PRODUCT.CURRVAL FROM DUAL
 selectNextval=SELECT SEQ_PRODUCT.NEXTVAL FROM DUAL
-updateBoard=UPDATE BOARD SET BOARD_NAME=?, BOARD_CONTEXT=?, BOARD_NO=?
+#updateBoard=UPDATE BOARD SET BOARD_TITLE=?, BOARD_CONTEXT=?, BOARD_NO=?
+updateBoard=UPDATE BOARD SET BOARD_TITLE=?, BOARD_CONTEXT=? WHERE BOARD_CATEGORY=0 AND BOARD_NO=?
