환급창 마무리, 관리자페이지 일부 구현

--- a/src/sql/admin/admin-query.properties
+++ b/src/sql/admin/admin-query.properties
@@ -1,1 +1,9 @@
 SelectAllRefundMember=SELECT R.REFUND_NO, R.MEMBER_NAME, R.REFUND_BANK, R.REFUND_ACCOUNT, R.MEMBER_BIRTH, R.REFUND_MONEY, R.REFUND_DATE, RL.REFUNDLIST_YN FROM REFUND R JOIN REFUNDLIST RL ON(R.REFUND_NO = RL.REFUND_NO)
+updateRefundStatus=UPDATE REFUNDLIST SET REFUNDLIST_YN = 1 WHERE REFUND_NO=?
+selectAllMember=SELECT M.MEMBER_CODE, M.MEMBER_ID, M.MEMBER_NAME, M.MEMBER_EMAIL, M.MEMBER_PHONE, M.MEMBER_CATEGORY, M.MEMBER_STATUS, WL.WARNINGLIST_COUNT FROM MEMBER M LEFT OUTER JOIN WARNINGLIST WL ON(M.MEMBER_CODE = WL.MEMBER_CODE) WHERE MEMBER_ID != 'admin'
+memberDelete=UPDATE MEMBER SET MEMBER_STATUS = 3 WHERE MEMBER_CODE = ?
+
+
+
+
+
