--- a/src/sql/member/member-query.properties
+++ b/src/sql/member/member-query.properties
@@ -7,7 +7,7 @@ loginSelect=SELECT * FROM MEMBER WHERE MEMBER_ID=? AND MEMBER_PWD=? AND MEMBER_S
 deleteSelect=UPDATE MEMBER SET MEMBER_STATUS=1 WHERE MEMBER_CODE=?
 idCheck=SELECT COUNT(*) FROM MEMBER WHERE MEMBER_ID=?
 insertMember=INSERT INTO MEMBER(MEMBER_CODE, MEMBER_ID,MEMBER_NAME,MEMBER_EMAIL,MEMBER_PWD,MEMBER_PHONE,SELLER_INTRODUCTION,SELLER_CAREER) VALUES(SEQ_MEMBER.NEXTVAL,?,?,?,?,?,?,?)
-findID=SELECT MEMBER_ID FROM MEMBER WHERE MEMBER_NAME=? AND MEMBER_EMAIL=?
+findID=SELECT MEMBER_ID FROM MEMBER WHERE MEMBER_NAME=? AND MEMBER_EMAIL=? 
 findPWD=SELECT MEMBER_PWD FROM MEMBER WHERE MEMBER_ID=? AND MEMBER_NAME=? AND MEMBER_EMAIL=?
-updateMember= UPDATE MEMBER SET MEMBER_NAME=?, MEMBER_EMAIL=?,MEMBER_PWD=?, MEMBER_PHONE=? SELLER_INTRODUCTION=? SELLER_CAREEA=? WHERE ID=?
+updateMember= UPDATE MEMBER SET MEMBER_NAME=?, MEMBER_EMAIL=?,MEMBER_PWD=?, MEMBER_PHONE=? SELLER_INTRODUCTION=? SELLER_CAREEA=? WHERE MEMBER_ID=?
 leaveMember = UPDATE MEMEBER SET MEMBER_STATUS=1 WHERE MEMBER_STATUS=0
