--- a/src/sql/admin/admin-query.properties
+++ b/src/sql/admin/admin-query.properties
@@ -1,9 +1,13 @@
 SelectAllRefundMember=SELECT R.REFUND_NO, R.MEMBER_NAME, R.REFUND_BANK, R.REFUND_ACCOUNT, R.MEMBER_BIRTH, R.REFUND_MONEY, R.REFUND_DATE, RL.REFUNDLIST_YN FROM REFUND R JOIN REFUNDLIST RL ON(R.REFUND_NO = RL.REFUND_NO)
 updateRefundStatus=UPDATE REFUNDLIST SET REFUNDLIST_YN = 1 WHERE REFUND_NO=?
-selectAllMember=SELECT M.MEMBER_CODE, M.MEMBER_ID, M.MEMBER_NAME, M.MEMBER_EMAIL, M.MEMBER_PHONE, M.MEMBER_CATEGORY, M.MEMBER_STATUS, WL.WARNINGLIST_COUNT FROM MEMBER M LEFT OUTER JOIN WARNINGLIST WL ON(M.MEMBER_CODE = WL.MEMBER_CODE) WHERE MEMBER_ID != 'admin'
+selectAllMember=SELECT DISTINCT M.MEMBER_CODE, M.MEMBER_ID, M.MEMBER_NAME, M.MEMBER_EMAIL, M.MEMBER_PHONE, M.MEMBER_CATEGORY, M.MEMBER_STATUS, WL.WARNINGLIST_COUNT, M.SELLER_CERTCHECK, I.IMG_FILEPATH FROM MEMBER M LEFT OUTER JOIN WARNINGLIST WL ON(M.MEMBER_CODE = WL.MEMBER_CODE) LEFT OUTER JOIN IMG I ON(M.MEMBER_CODE = I.MEMBER_CODE) WHERE MEMBER_ID != 'admin' ORDER BY 1 
 memberDelete=UPDATE MEMBER SET MEMBER_STATUS = 3 WHERE MEMBER_CODE = ?
-
-
-
+countPlus=UPDATE WARNINGLIST SET WARNINGLIST_COUNT = WARNINGLIST_COUNT +1  WHERE MEMBER_CODE = ?
+countMinus=UPDATE WARNINGLIST SET WARNINGLIST_COUNT = WARNINGLIST_COUNT -1  WHERE MEMBER_CODE = ?
+memberLightOutF=UPDATE MEMBER SET MEMBER_STATUS = 1 WHERE MEMBER_CODE = ?
+memberHeavyOutF=UPDATE MEMBER SET MEMBER_STATUS = 2 WHERE MEMBER_CODE = ?
+memberRestoreF=UPDATE MEMBER SET MEMBER_STATUS = 0 WHERE MEMBER_CODE = ?
+imgCert=UPDATE MEMBER SET SELLER_CERTCHECK = 1 WHERE MEMBER_CODE = ?
+selectAllBoard=SELECT B.BOARD_NO, B.BOARD_TITLE, M.MEMBER_ID, B.BOARD_DATE FROM BOARD B JOIN MEMBER M ON(B.MEMBER_CODE = M.MEMBER_CODE) WHERE B.BOARD_CATEGORY = 1
 
 
