--- a/src/sql/cash/cash-query.properties
+++ b/src/sql/cash/cash-query.properties
@@ -3,7 +3,8 @@ insertRefundData=INSERT INTO REFUND VALUES(SEQ_REFUND.NEXTVAL, ?, ?, ?, ?, ?, ?,
 insertRefundListData=INSERT INTO REFUNDLIST VALUES((SELECT R.REFUND_NO FROM (SELECT REFUND_NO FROM REFUND ORDER BY REFUND_NO DESC) R WHERE  ROWNUM =1) , 0, SYSDATE)
 insertMemberCashRefundData=INSERT INTO MEMBERCASH VALUES(SEQ_MEMBERCASH.NEXTVAL, ?, (SELECT MC.MEMBERCASH_NOWCASH FROM (SELECT MEMBERCASH_NOWCASH, MEMBER_CODE FROM MEMBERCASH ORDER BY MEMBERCASH_CODE DESC)  MC WHERE MC.MEMBER_CODE = ? AND ROWNUM =1)-? , 2, NULL, NULL, NULL, NULL, (SELECT R.REFUND_NO FROM (SELECT REFUND_NO FROM REFUND ORDER BY REFUND_NO DESC) R WHERE  ROWNUM =1), ?)
 selectOneProduct=SELECT DISTINCT D.DEAL_NO, P.PRODUCT_NO, I.IMG_FILEPATH, P.PRODUCT_NAME, P.PRODUCT_CONTEXT, D.CUSTOMER_CODE, D.SELLER_CODE, P.PRODUCT_ITEM, P.PRODUCT_ITEMPRICE, PL.PLUSPRODUCT_ITEM, PL.PLUSPRODUCT_PRICE, (SELECT MC.MEMBERCASH_NOWCASH FROM (SELECT MEMBERCASH_NOWCASH, MEMBER_CODE FROM MEMBERCASH ORDER BY MEMBERCASH_CODE DESC) MC JOIN MEMBER M ON M.MEMBER_CODE = MC.MEMBER_CODE WHERE MC.MEMBER_CODE = ? AND ROWNUM =1) AS NOWCASH  FROM MEMBER M JOIN PRODUCT P ON(M.MEMBER_CODE = P.MEMBER_CODE) JOIN DEAL D ON(P.PRODUCT_NO = D.PRODUCT_NO) JOIN IMG I ON(P.PRODUCT_NO = I.PRODUCT_NO) JOIN PLUSPRODUCT PL ON(P.PRODUCT_NO = PL.PRODUCT_NO)  WHERE D.CUSTOMER_CODE = ? AND P.PRODUCT_NO = ?
-updateCashDeal=INSERT INTO DEALLIST VALUES(?, ?, 1) 
+updateCashDeal=UPDATE DEALLIST SET DEALLIST_CATEGORY = 1 WHERE DEAL_NO = ?
+#updateCashDeal=INSERT INTO DEALLIST VALUES(?, ?, 1) 
 #updateCashDeal=UPDATE DEALLIST SET DEAL_NO = ?, DEALLIST_ADDMESSAGE = ?, DEALLIST_CATEGORY = 1
 updateCustomerCash=INSERT INTO MEMBERCASH VALUES(SEQ_MEMBERCASH.NEXTVAL, ?, ?, 0, ?, ?, NULL, NULL, NULL, NULL)
 updateSellerCash=INSERT INTO MEMBERCASH VALUES(SEQ_MEMBERCASH.NEXTVAL, ?, ?, 0, ?, ?, NULL, NULL, NULL, NULL)
