--- a/src/sql/member/member-query.properties
+++ b/src/sql/member/member-query.properties
@@ -4,10 +4,10 @@ adminBoardList=
 
 #JEONG
 loginSelect=SELECT * FROM MEMBER WHERE MEMBER_ID=? AND MEMBER_PWD=? AND MEMBER_STATUS=0
-deleteSelect=UPDATE MEMBER SET MEMBER_STATUS=1 WHERE MEMBER_CODE=?
+#deleteSelect=UPDATE MEMBER SET MEMBER_STATUS=1 WHERE MEMBER_CODE=?
 idCheck=SELECT COUNT(*) FROM MEMBER WHERE MEMBER_ID=?
 insertMember=INSERT INTO MEMBER(MEMBER_CODE, MEMBER_ID,MEMBER_NAME,MEMBER_EMAIL,MEMBER_PWD,MEMBER_PHONE,SELLER_INTRODUCTION,SELLER_CAREER) VALUES(SEQ_MEMBER.NEXTVAL,?,?,?,?,?,?,?)
 findID=SELECT MEMBER_ID FROM MEMBER WHERE MEMBER_NAME=? AND MEMBER_EMAIL=? 
 findPWD=UPDATE MEMBER SET MEMBER_PWD=? WHERE MEMBER_NAME=? AND MEMBER_ID=? AND MEMBER_EMAIL=?
-updateMember= UPDATE MEMBER SET MEMBER_NAME=?, MEMBER_EMAIL=?,MEMBER_PWD=?, MEMBER_PHONE=? SELLER_INTRODUCTION=? SELLER_CAREEA=? WHERE MEMBER_ID=?
-leaveMember = UPDATE MEMEBER SET MEMBER_STATUS=1 WHERE MEMBER_STATUS=0
+updateMember= UPDATE MEMBER SET MEMBER_PWD=?, MEMBER_NAME=?, MEMBER_PHONE=?,MEMBER_EMAIL=?, SELLER_INTRODUCTION=? ,SELLER_CAREER=? WHERE MEMBER_ID=? AND MEMBER_STATUS=0
+leaveMember = UPDATE MEMBER SET MEMBER_STATUS=1 WHERE MEMBER_Id=?
