--- a/src/sql/member/member-query.properties
+++ b/src/sql/member/member-query.properties
@@ -6,7 +6,8 @@ adminBoardList=
 loginSelect=SELECT * FROM MEMBER WHERE MEMBER_ID=? AND MEMBER_PWD=? AND MEMBER_STATUS=0
 #deleteSelect=UPDATE MEMBER SET MEMBER_STATUS=1 WHERE MEMBER_CODE=?
 idCheck=SELECT COUNT(*) FROM MEMBER WHERE MEMBER_ID=?
-insertMember=INSERT INTO MEMBER(MEMBER_CODE, MEMBER_ID,MEMBER_NAME,MEMBER_EMAIL,MEMBER_PWD,MEMBER_PHONE,SELLER_INTRODUCTION,SELLER_CAREER) VALUES(SEQ_MEMBER.NEXTVAL,?,?,?,?,?,?,?)
+insertCon=INSERT INTO MEMBER VALUES(SEQ_MEMBER.NEXTVAL,?,?,?,?,?,0, NULL,NULL, 0, 0, NULL, NULL, NULL, NULL, 0)
+insertSel=INSERT INTO MEMBER VALUES(SEQ_MEMBER.NEXTVAL,?,?,?,?,?,1, ?,NULL, 0, 0, NULL, NULL, NULL, ?, 0)
 findID=SELECT MEMBER_ID FROM MEMBER WHERE MEMBER_NAME=? AND MEMBER_EMAIL=? 
 findPWD=UPDATE MEMBER SET MEMBER_PWD=? WHERE MEMBER_NAME=? AND MEMBER_ID=? AND MEMBER_EMAIL=?
 updateMember= UPDATE MEMBER SET MEMBER_PWD=?, MEMBER_NAME=?, MEMBER_PHONE=?,MEMBER_EMAIL=?, SELLER_INTRODUCTION=? ,SELLER_CAREER=? WHERE MEMBER_ID=? AND MEMBER_STATUS=0
