--- a/src/sql/admin/admin-query.properties
+++ b/src/sql/admin/admin-query.properties
@@ -9,5 +9,5 @@ memberHeavyOutF=UPDATE MEMBER SET MEMBER_STATUS = 2 WHERE MEMBER_CODE = ?
 memberRestoreF=UPDATE MEMBER SET MEMBER_STATUS = 0 WHERE MEMBER_CODE = ?
 imgCert=UPDATE MEMBER SET SELLER_CERTCHECK = 1 WHERE MEMBER_CODE = ?
 selectAllBoard=SELECT B.BOARD_NO, B.BOARD_TITLE, M.MEMBER_ID, B.BOARD_DATE, B.BOARD_QNAANSWERYN FROM BOARD B JOIN MEMBER M ON(B.MEMBER_CODE = M.MEMBER_CODE) WHERE B.BOARD_CATEGORY = 1
-
+#refreshPage=
 
