--- a/src/sql/product/deal-query.properties
+++ b/src/sql/product/deal-query.properties
@@ -1,1 +1,4 @@
 insertDeal=INSERT INTO DEAL VALUES(SEQ_DEAL.NEXTVAL, ?, ?, ?, ?)
+insertDealList=INSERT INTO DEALLIST VALUES (SEQ_DEAL.CURRVAL, ?, NULL, 0)
+selectCurrval=SELECT SEQ_PRODUCT.CURRVAL FROM DUAL
+selectNextval=SELECT SEQ_PRODUCT.NEXTVAL FROM DUAL
