인설트 딜리트 완료 리플만 만들면 되여

--- a/src/sql/board/board-query.properties
+++ b/src/sql/board/board-query.properties
@@ -1,7 +1,7 @@
 #selectList=SELECT RNUM, BOARD_NO, MEMBER_NAME, BOARD_TITLE, BOARD_CONTEXT, BOARD_DATE, BOARD_CATEGORY, BOARD_COUNT, BOARD_DELETE FROM (SELECT ROWNUM RNUM, BOARD_NO, MEMBER_NAME, BOARD_TITLE, BOARD_CONTEXT, BOARD_DATE, BOARD_CATEGORY, BOARD_COUNT, BOARD_DELETE FROM (SELECT B.BOARD_NO, M.MEMBER_NAME, B.BOARD_TITLE, B.BOARD_CONTEXT, B.BOARD_DATE, B.BOARD_CATEGORY, B.BOARD_COUNT, B.BOARD_DELETE FROM BOARD B JOIN MEMBER M ON(B.MEMBER_CODE = M.MEMBER_CODE) ORDER BY B.BOARD_NO DESC)) WHERE RNUM BETWEEN ? AND ?
 #selectList=SELECT RNUM, BOARD_NO, MEMBER_CODE, MEMBER_NAME, BOARD_TITLE, BOARD_CONTEXT, BOARD_DATE, BOARD_CATEGORY, BOARD_COUNT, BOARD_DELETE FROM (SELECT ROWNUM RNUM, BOARD_NO, MEMBER_CODE, MEMBER_NAME, BOARD_TITLE, BOARD_CONTEXT, BOARD_DATE, BOARD_CATEGORY, BOARD_COUNT, BOARD_DELETE FROM (SELECT B.BOARD_NO, B.MEMBER_CODE, M.MEMBER_NAME, B.BOARD_TITLE, B.BOARD_CONTEXT, B.BOARD_DATE, B.BOARD_CATEGORY, B.BOARD_COUNT, B.BOARD_DELETE FROM BOARD B JOIN MEMBER M ON(B.MEMBER_CODE = M.MEMBER_CODE) WHERE BOARD_CATEGORY = 0  ORDER BY B.BOARD_NO DESC)) WHERE  RNUM BETWEEN ? AND ?
 selectList=SELECT RNUM, BOARD_NO, MEMBER_NAME, BOARD_TITLE, BOARD_CONTEXT, BOARD_DATE, BOARD_CATEGORY, BOARD_COUNT, BOARD_DELETE FROM (SELECT ROWNUM RNUM, BOARD_NO, MEMBER_NAME, BOARD_TITLE, BOARD_CONTEXT, BOARD_DATE, BOARD_CATEGORY, BOARD_COUNT, BOARD_DELETE FROM (SELECT B.BOARD_NO, M.MEMBER_NAME, B.BOARD_TITLE, B.BOARD_CONTEXT, B.BOARD_DATE, B.BOARD_CATEGORY, B.BOARD_COUNT, B.BOARD_DELETE FROM BOARD B JOIN MEMBER M ON(B.MEMBER_CODE = M.MEMBER_CODE) WHERE BOARD_CATEGORY = 0 AND BOARD_DELETE = 0 ORDER BY B.BOARD_NO DESC)) WHERE  RNUM BETWEEN ? AND ? 
-insertBoard=INSERT INTO BOARD VALUES (SEQ_BOARD.NEXTVAL, ?, ?, ?, SYSDATE, 0, DEFAULT, 0)  
+insertBoard=INSERT INTO BOARD VALUES (SEQ_BOARD.NEXTVAL, ?, ?, ?, SYSDATE, 0, DEFAULT, 0, 0)  
 listCount=SELECT COUNT(*) FROM BOARD WHERE BOARD_CATEGORY=0 AND BOARD_DELETE=0
 #updateCount=UPDATE BOARD SET BOARD_COUNT=(SELECT BOARD_COUNT FROM BOARD WHERE MEMBER_CODE=?) + 1 WHERE MEMBER_CODE=?
 updateCount=UPDATE BOARD SET BOARD_COUNT=(SELECT BOARD_COUNT FROM BOARD WHERE BOARD_NO=?) + 1 WHERE BOARD_NO=?
@@ -20,3 +20,5 @@ updateFaq=UPDATE BOARD SET BOARD_TITLE=?, BOARD_CONTEXT=? WHERE BOARD_CATEGORY=1
 updateQna=UPDATE BOARD SET BOARD_TITLE=?, BOARD_CONTEXT=? WHERE BOARD_CATEGORY=2 AND BOARD_NO=?
 deleteFaq=UPDATE BOARD SET BOARD_DELETE=1 WHERE BOARD_NO=?
 deleteQna=UPDATE BOARD SET BOARD_DELETE=1 WHERE BOARD_NO=?
+insertFaq=INSERT INTO BOARD VALUES (SEQ_BOARD.NEXTVAL, ?, ?, ?, SYSDATE, 1, DEFAULT, 0, 0)
+insertQna=INSERT INTO BOARD VALUES (SEQ_BOARD.NEXTVAL, ?, ?, ?, SYSDATE, 2, DEFAULT, 0, 0)
