구현1: 평점(radio버튼) - DB에 있는 값 javaScript에서 제어 ★구현2: 메인페이지(베스트판매자, 최근 본 상품) (op)구현4: 상품리스트: 카테고리로 검색 (op)구현5. 판매자 프로필 - 상품평 (op)구현6. 섬머노트 적용
오류1. 상품수정페이지 - 추가상품 개수 indexoutofboundException

--- a/src/sql/product/review-query.properties
+++ b/src/sql/product/review-query.properties
@@ -1,1 +1,1 @@
-selectList=SELECT R.REVIEW_NO, R.PRODUCT_NO, R.MEMBER_CODE, M.MEMBER_ID, R.REVIEW_CONTEXT, R.REVIEW_DATE, R.REVIEW_GRADE, R.REVIEW_DELETEYN FROM REVIEW R INNER JOIN MEMBER M ON (R.MEMBER_CODE=M.MEMBER_CODE) WHERE PRODUCT_NO=?
+selectList=SELECT R.REVIEW_NO, R.PRODUCT_NO, R.MEMBER_CODE, M.MEMBER_ID, R.REVIEW_CONTEXT, R.REVIEW_DATE, R.REVIEW_GRADE, R.REVIEW_DELETEYN FROM REVIEW R INNER JOIN MEMBER M ON (R.MEMBER_CODE=M.MEMBER_CODE) WHERE REVIEW_DELETEYN=0 AND  PRODUCT_NO=?
