--- a/src/sql/board/board-query.properties
+++ b/src/sql/board/board-query.properties
@@ -11,7 +11,6 @@ selectCurrval=SELECT SEQ_PRODUCT.CURRVAL FROM DUAL
 selectNextval=SELECT SEQ_PRODUCT.NEXTVAL FROM DUAL
 #updateBoard=UPDATE BOARD SET BOARD_TITLE=?, BOARD_CONTEXT=?, BOARD_NO=?
 updateBoard=UPDATE BOARD SET BOARD_TITLE=?, BOARD_CONTEXT=? WHERE BOARD_CATEGORY=0 AND BOARD_NO=?
-insertReply=INSERT INTO REPLY VALUES(SEQ_REPLY.NEXTVAL, ?, ?, ?, SYSDATE, 0)
 selectReply=SELECT R.REPLY_NO, R.BOARD_NO, M.MEMBER_NAME, REPLY_CONTEXT, REPLY_DATE, REPLY_DELETE FROM REPLY R JOIN MEMBER M ON(R.MEMBER_CODE = M.MEMBER_CODE) WHERE REPLY_DELETE = 0 AND R.BOARD_NO=? ORDER BY R.REPLY_NO DESC
 deleteBoard=UPDATE BOARD SET BOARD_DELETE=1 WHERE BOARD_NO=?
 selectFaqList=SELECT RNUM, BOARD_NO, MEMBER_NAME, BOARD_TITLE, BOARD_CONTEXT, BOARD_DATE, BOARD_CATEGORY, BOARD_COUNT, BOARD_DELETE FROM (SELECT ROWNUM RNUM, BOARD_NO, MEMBER_NAME, BOARD_TITLE, BOARD_CONTEXT, BOARD_DATE, BOARD_CATEGORY, BOARD_COUNT, BOARD_DELETE FROM (SELECT B.BOARD_NO, M.MEMBER_NAME, B.BOARD_TITLE, B.BOARD_CONTEXT, B.BOARD_DATE, B.BOARD_CATEGORY, B.BOARD_COUNT, B.BOARD_DELETE FROM BOARD B JOIN MEMBER M ON(B.MEMBER_CODE = M.MEMBER_CODE) WHERE BOARD_CATEGORY = 1 AND BOARD_DELETE = 0 ORDER BY B.BOARD_NO DESC)) WHERE  RNUM BETWEEN ? AND ?
@@ -22,3 +21,5 @@ deleteFaq=UPDATE BOARD SET BOARD_DELETE=1 WHERE BOARD_NO=?
 deleteQna=UPDATE BOARD SET BOARD_DELETE=1 WHERE BOARD_NO=?
 insertFaq=INSERT INTO BOARD VALUES (SEQ_BOARD.NEXTVAL, ?, ?, ?, SYSDATE, 1, DEFAULT, 0, 0)
 insertQna=INSERT INTO BOARD VALUES (SEQ_BOARD.NEXTVAL, ?, ?, ?, SYSDATE, 2, DEFAULT, 0, 0)
+selectReplyList=SELECT R.REPLY_NO, R.BOARD_NO, R.REPLY_CONTEXT, R.MEMBER_CODE,  R.REPLY_DATE, R.REPLY_DELETE FROM REPLY R JOIN MEMBER M ON(R.MEMBER_CODE = M.MEMBER_CODE) WHERE R.REPLY_NO = ? AND R.REPLY_DELETE = 0 ORDER BY R.REPLY_NO DESC
+insertReply=INSERT INTO REPLY VALUES(SEQ_REPLY.NEXTVAL, ?, ?, ?, SYSDATE, 0)
