--- a/src/sql/product/review-query.properties
+++ b/src/sql/product/review-query.properties
@@ -1,1 +1,2 @@
 selectList=SELECT R.REVIEW_NO, R.PRODUCT_NO, R.MEMBER_CODE, M.MEMBER_ID, R.REVIEW_CONTEXT, R.REVIEW_DATE, R.REVIEW_GRADE, R.REVIEW_DELETEYN FROM REVIEW R INNER JOIN MEMBER M ON (R.MEMBER_CODE=M.MEMBER_CODE) WHERE REVIEW_DELETEYN=0 AND  PRODUCT_NO=?
+selectAllList=SELECT R.REVIEW_NO, R.PRODUCT_NO, R.MEMBER_CODE, M.MEMBER_ID, R.REVIEW_CONTEXT, R.REVIEW_DATE, R.REVIEW_GRADE FROM REVIEW R, MEMBER M WHERE (R.MEMBER_CODE=M.MEMBER_CODE) AND PRODUCT_NO IN(SELECT PRODUCT_NO FROM PRODUCT WHERE MEMBER_CODE=?)
