--- a/src/sql/admin/admin-query.properties
+++ b/src/sql/admin/admin-query.properties
@@ -14,5 +14,7 @@ cashConvertExcel=SELECT MC.MEMBERCASH_CODE, MC.MEMBER_CODE, M.MEMBER_ID, MC.MEMB
 ProductConvertExcel=SELECT P.PRODUCT_NO, P.MEMBER_CODE, M.MEMBER_ID, M.MEMBER_NAME, P.PRODUCT_NAME, P.PRODUCT_CONTEXT ,P.PRODUCT_ITEM, P.PRODUCT_ITEMPRICE, PP.PLUSPRODUCT_ITEM, PP.PLUSPRODUCT_PRICE, P.PRODUCT_REGISTERDATE, P.PRODUCT_DELETEYN FROM PRODUCT P JOIN PLUSPRODUCT PP ON(P.PRODUCT_NO = PP.PRODUCT_NO) JOIN MEMBER M ON(P.MEMBER_CODE = M.MEMBER_CODE)
 MemberConvertExcel=SELECT M.MEMBER_CODE, M.MEMBER_ID, M.MEMBER_NAME, M.MEMBER_EMAIL, M.MEMBER_PHONE, M.MEMBER_CATEGORY, M.SELLER_INTRODUCTION, M.SELLER_GRADE, M.MEMBER_STATUS, M.SELLER_BANK, M.SELLER_ACCOUNT, M.SELLER_CAREER, M.SELLER_CERTCHECK, I.IMG_FILEPATH , WL.WARNINGLIST_COUNT FROM MEMBER M INNER JOIN WARNINGLIST WL ON(M.MEMBER_CODE = WL.MEMBER_CODE) INNER JOIN IMG I ON(M.MEMBER_CODE = I.MEMBER_CODE)
 BoardConvertExcel=SELECT B.BOARD_NO, B.MEMBER_CODE, M.MEMBER_ID, B.BOARD_TITLE, B.BOARD_CONTEXT, B.BOARD_DATE, B.BOARD_CATEGORY, B.BOARD_COUNT, B.BOARD_DELETE, B.BOARD_QNAANSWERYN FROM BOARD B JOIN MEMBER M ON(B.MEMBER_CODE = M.MEMBER_CODE)
-
+selectAllFaq=SELECT B.BOARD_NO, B.BOARD_TITLE, M.MEMBER_ID, B.BOARD_DATE, B.BOARD_DELETE FROM BOARD B JOIN MEMBER M ON(B.MEMBER_CODE = M.MEMBER_CODE) WHERE B.BOARD_CATEGORY = 2
+deleteAdminFaq=UPDATE BOARD SET BOARD_DELETE = 1 WHERE BOARD_NO = ?
+restoreAdminFaq=UPDATE BOARD SET BOARD_DELETE = 0 WHERE BOARD_NO = ?
 
