--- a/src/sql/board/board-query.properties
+++ b/src/sql/board/board-query.properties
@@ -6,7 +6,7 @@ listCount=SELECT COUNT(*) FROM BOARD WHERE BOARD_CATEGORY=0 AND BOARD_DELETE=0
 #updateCount=UPDATE BOARD SET BOARD_COUNT=(SELECT BOARD_COUNT FROM BOARD WHERE MEMBER_CODE=?) + 1 WHERE MEMBER_CODE=?
 updateCount=UPDATE BOARD SET BOARD_COUNT=(SELECT BOARD_COUNT FROM BOARD WHERE BOARD_NO=?) + 1 WHERE BOARD_NO=?
 #selectOne=SELECT BOARD_NO, MEMBER_NAME, BOARD_TITLE, BOARD_CONTEXT, BOARD_DATE, BOARD_CATEGORY, BOARD_COUNT, BOARD_DELETE FROM BOARD JOIN MEMBER ON(B.MEMBER_CODE = M.MEMBER_CODE) WHERE B.BOARD_DELETE = 0 AND B.BOARD_NO=?
-selectOne=SELECT BOARD_NO, MEMBER_NAME, BOARD_TITLE, BOARD_CONTEXT, BOARD_DATE, BOARD_CATEGORY, BOARD_COUNT, BOARD_DELETE FROM BOARD B JOIN MEMBER M ON(B.MEMBER_CODE = M.MEMBER_CODE) WHERE B.BOARD_DELETE = 0 AND B.BOARD_NO=?
+selectOne=SELECT B.BOARD_NO, M.MEMBER_NAME, B.BOARD_TITLE, B.BOARD_CONTEXT, B.BOARD_DATE, B.BOARD_CATEGORY, B.BOARD_COUNT, B.BOARD_DELETE FROM BOARD B JOIN MEMBER M ON(B.MEMBER_CODE = M.MEMBER_CODE) WHERE B.BOARD_NO = ?
 selectCurrval=SELECT SEQ_PRODUCT.CURRVAL FROM DUAL
 selectNextval=SELECT SEQ_PRODUCT.NEXTVAL FROM DUAL
 #updateBoard=UPDATE BOARD SET BOARD_TITLE=?, BOARD_CONTEXT=?, BOARD_NO=?
