최근본상품 DAO

--- a/src/sql/product/product-query.properties
+++ b/src/sql/product/product-query.properties
@@ -19,3 +19,4 @@ searchList=SELECT RNUM, IMG_NO, ORIGINNAME, CHANGENAME, IMG_CATEGORY, MEMBER_COD
 deleteOne=UPDATE PRODUCT SET PRODUCT_DELETEYN=1 WHERE PRODUCT_NO=?
 deleteImgOne=UPDATE IMG SET IMG_DELETE=1 WHERE PRODUCT_NO=?
 listCountTitle=SELECT COUNT(DISTINCT P.PRODUCT_NO) FROM PRODUCT P INNER JOIN IMG I ON (P.PRODUCT_NO = I.PRODUCT_NO)  WHERE P.PRODUCT_DELETEYN=0 AND I.IMG_DELETE=0  AND P.PRODUCT_NAME LIKE '%'||?||'%'
+selectResentProductList=
