--- a/src/sql/member/member-query.properties
+++ b/src/sql/member/member-query.properties
@@ -11,4 +11,4 @@ insertSel=INSERT INTO MEMBER VALUES(SEQ_MEMBER.NEXTVAL,?,?,?,?,?,1, ?,NULL, 0, 0
 findID=SELECT MEMBER_ID FROM MEMBER WHERE MEMBER_NAME=? AND MEMBER_EMAIL=? 
 findPWD=UPDATE MEMBER SET MEMBER_PWD=? WHERE MEMBER_NAME=? AND MEMBER_ID=? AND MEMBER_EMAIL=?
 updateMember= UPDATE MEMBER SET MEMBER_PWD=?, MEMBER_NAME=?, MEMBER_PHONE=?,MEMBER_EMAIL=?, SELLER_INTRODUCTION=? ,SELLER_CAREER=? WHERE MEMBER_ID=? AND MEMBER_STATUS=0
-leaveMember = UPDATE MEMBER SET MEMBER_STATUS=1 WHERE MEMBER_ID=? AND MEMBER_STATUS=0
+leaveMember = UPDATE MEMBER SET MEMBER_STATUS=1 WHERE MEMBER_CODE=? AND MEMBER_STATUS=0
