--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,31 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Owner/apache-tomcat-8.5.35-windows-x64/apache-tomcat-8.5.35/lib/annotations-api.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/apache-tomcat-8.5.35-windows-x64/apache-tomcat-8.5.35/lib/catalina.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/apache-tomcat-8.5.35-windows-x64/apache-tomcat-8.5.35/lib/catalina-ant.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/apache-tomcat-8.5.35-windows-x64/apache-tomcat-8.5.35/lib/catalina-ha.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/apache-tomcat-8.5.35-windows-x64/apache-tomcat-8.5.35/lib/catalina-storeconfig.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/apache-tomcat-8.5.35-windows-x64/apache-tomcat-8.5.35/lib/catalina-tribes.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/apache-tomcat-8.5.35-windows-x64/apache-tomcat-8.5.35/lib/ecj-4.6.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/apache-tomcat-8.5.35-windows-x64/apache-tomcat-8.5.35/lib/el-api.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/apache-tomcat-8.5.35-windows-x64/apache-tomcat-8.5.35/lib/jasper.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/apache-tomcat-8.5.35-windows-x64/apache-tomcat-8.5.35/lib/jasper-el.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/apache-tomcat-8.5.35-windows-x64/apache-tomcat-8.5.35/lib/jaspic-api.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/apache-tomcat-8.5.35-windows-x64/apache-tomcat-8.5.35/lib/jsp-api.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/apache-tomcat-8.5.35-windows-x64/apache-tomcat-8.5.35/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/apache-tomcat-8.5.35-windows-x64/apache-tomcat-8.5.35/lib/tomcat-api.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/apache-tomcat-8.5.35-windows-x64/apache-tomcat-8.5.35/lib/tomcat-coyote.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/apache-tomcat-8.5.35-windows-x64/apache-tomcat-8.5.35/lib/tomcat-dbcp.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/apache-tomcat-8.5.35-windows-x64/apache-tomcat-8.5.35/lib/tomcat-i18n-es.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/apache-tomcat-8.5.35-windows-x64/apache-tomcat-8.5.35/lib/tomcat-i18n-fr.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/apache-tomcat-8.5.35-windows-x64/apache-tomcat-8.5.35/lib/tomcat-i18n-ja.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/apache-tomcat-8.5.35-windows-x64/apache-tomcat-8.5.35/lib/tomcat-i18n-ru.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/apache-tomcat-8.5.35-windows-x64/apache-tomcat-8.5.35/lib/tomcat-jdbc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/apache-tomcat-8.5.35-windows-x64/apache-tomcat-8.5.35/lib/tomcat-jni.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/apache-tomcat-8.5.35-windows-x64/apache-tomcat-8.5.35/lib/tomcat-util.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/apache-tomcat-8.5.35-windows-x64/apache-tomcat-8.5.35/lib/tomcat-util-scan.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/apache-tomcat-8.5.35-windows-x64/apache-tomcat-8.5.35/lib/tomcat-websocket.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/apache-tomcat-8.5.35-windows-x64/apache-tomcat-8.5.35/lib/websocket-api.jar"/>
 	<classpathentry kind="output" path="web/WEB-INF/classes"/>
 </classpath>
