오류 페이지 구현

--- a/src/sql/member/member-query.properties
+++ b/src/sql/member/member-query.properties
@@ -3,7 +3,7 @@
 adminBoardList=
 
 #JEONG
-loginSelect=SELECT * FROM MEMBER WHERE MEMBER_ID=? AND MEMBER_PWD=? AND MEMBER_STATUS=0
+loginSelect=SELECT M.MEMBER_CODE, M.MEMBER_ID,  M.MEMBER_PWD, M.MEMBER_NAME, M.MEMBER_PHONE, M.MEMBER_EMAIL, M.MEMBER_CATEGORY, M.SELLER_INTRODUCTION, M.SELLER_GRADE, M.MEMBER_ADMIN, M.MEMBER_STATUS, M.SELLER_ACCOUNTNAME, M.SELLER_BANK, M.SELLER_ACCOUNT, M.SELLER_CAREER, M.SELLER_CERTCHECK, WL.WARNINGLIST_COUNT FROM MEMBER M LEFT OUTER JOIN WARNINGLIST WL ON(M.MEMBER_CODE = WL.MEMBER_CODE) WHERE MEMBER_ID=? AND MEMBER_PWD=? AND MEMBER_STATUS=0
 #deleteSelect=UPDATE MEMBER SET MEMBER_STATUS=1 WHERE MEMBER_CODE=?
 idCheck=SELECT COUNT(*) FROM MEMBER WHERE MEMBER_ID=?
 insertCon=INSERT INTO MEMBER VALUES(SEQ_MEMBER.NEXTVAL,?,?,?,?,?,0, NULL,NULL, 0, 0, NULL, NULL, NULL, NULL, 0)
