--- a/src/sql/mypage/mypage_query.properties
+++ b/src/sql/mypage/mypage_query.properties
@@ -27,7 +27,9 @@ getccsListCount = SELECT COUNT(*) FROM (SELECT D.DEAL_NO, M.MEMBER_ID, P.PRODUCT
 selectProductList = SELECT RNUM, PRODUCT_NO, PRODUCT_NAME, PRODUCT_CONTEXT FROM (SELECT ROWNUM RNUM, PRODUCT_NO, PRODUCT_NAME, PRODUCT_CONTEXT FROM (SELECT PRODUCT_NO, PRODUCT_NAME, PRODUCT_CONTEXT FROM PRODUCT WHERE MEMBER_CODE=?)) WHERE RNUM BETWEEN ? AND ?
 getproductListCount = SELECT COUNT(*) FROM (SELECT PRODUCT_NO, PRODUCT_NAME, PRODUCT_CONTEXT FROM PRODUCT WHERE MEMBER_CODE=?)
 completeUpdate = UPDATE DEALLIST SET DEALLIST_CATEGORY=4 WHERE DEAL_NO=? AND DEALLIST_CATEGORY=3
-selectendDealList = SELECT M.MEMBER_ID, P.PRODUCT_NAME, DL.DEALLIST_ADDMESSAGE1, DL.DEALLIST_CATEGORY FROM MEMBER M JOIN DEAL D ON (M.MEMBER_CODE = D.CUSTOMER_CODE) JOIN PRODUCT P ON (P.PRODUCT_NO = D.PRODUCT_NO) JOIN DEALLIST DL ON(DL.DEAL_NO = D.DEAL_NO) WHERE D.SELLER_CODE=? AND DL.DEALLIST_CATEGORY=3 OR DL.DEALLIST_CATEGORY=4
+#selectendDealList = SELECT M.MEMBER_ID, P.PRODUCT_NAME, DL.DEALLIST_ADDMESSAGE1, DL.DEALLIST_CATEGORY FROM MEMBER M JOIN DEAL D ON (M.MEMBER_CODE = D.CUSTOMER_CODE) JOIN PRODUCT P ON (P.PRODUCT_NO = D.PRODUCT_NO) JOIN DEALLIST DL ON(DL.DEAL_NO = D.DEAL_NO) WHERE D.SELLER_CODE=? AND DL.DEALLIST_CATEGORY=3 OR DL.DEALLIST_CATEGORY=4
+selectendDealList=
+getendListCount =
 selectCashList = SELECT R.REFUND_DATE, R.REFUND_BANK, R.REFUND_ACCOUNT, R.REFUND_MONEY, RL.REFUNDLIST_YN FROM REFUND R JOIN REFUNDLIST RL ON (R.REFUND_NO = RL.REFUND_NO)WHERE R.MEMBER_CODE=?
 reviewSeller =SELECT I.CHANGENAME, P.PRODUCT_NAME, P.PRODUCT_CONTEXT FROM IMG I JOIN PRODUCT P ON (I.PRODUCT_NO =P.PRODUCT_NO) JOIN DEAL D ON(D.PRODUCT_NO=P.PRODUCT_NO) WHERE D.DEAL_NO=? AND I.IMG_LEVEL = 0 AND I.IMG_DELETE = 0
 ReviewUpdate=INSERT INTO REVIEW VALUES (SEQ_REVIEW.NEXTVAL,?,?,?,SYSDATE,?,0)
